--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <ul class="navigation">
                 <a href="#home">Home</a>
                 <a href="sobrenos.html">Sobre Nós</a>
-                <a href="#services">Serviços</a>
-                <a href="#contact">Contactos</a>
+                <a href="servicos.html">Serviços</a>
+                <a href="contactos.html">Contactos</a>
             </ul>
         </nav>
     </header>
@@ -54,12 +54,12 @@
                 <div class="section-column">
                     <h2>Serviços</h2>
                     <img src="static/imagens/outro_nivel.webp" alt="About Us Image" class="section-image">
-                    <a href="#" class="section-button">Saiba Mais</a>
+                    <a href="servicos.html" class="section-button">Saiba Mais</a>
                 </div>
                 <div class="section-column">
                     <h2>Contactos</h2>
                     <img src="static/imagens/telemoveis_sociais.webp" alt="Services Image" class="section-image">
-                    <a href="#" class="section-button">Entre em Contato</a>
+                    <a href="contactos.html" class="section-button">Entre em Contato</a>
                 </div>
             </div>
         </div>
