--- a/servicos.html
+++ b/servicos.html
@@ -4,24 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serviços - Mudança Digital</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/css/servicos.css">
 </head>
 <body>
     <header>
-        <h1>Serviços</h1>
+        <div class="logo"></div>
+        <nav>
+            <ul class="navigation">
+                <a href="index.html">Home</a>
+                <a href="sobrenos.html">Sobre Nós</a>
+                <a href="servicos.html">Serviços</a>
+                <a href="contactos.html">Contactos</a>
+            </ul>
+        </nav>
     </header>
+    <div class="servicos_inicial">
+        <h1>Serviços</h1>
+    </div>
     <section class="services-container">
         <div class="service">
-            <h2>Desenvolvimento Web</h2>
-            <p>Criamos websites modernos e responsivos que garantem uma excelente experiência para o usuário e melhoram a visibilidade do seu negócio online.</p>
+            <h2>Desenvolvimento de Website</h2>
+            <img src="static/imagens/desenvolvimento_web.webp" alt="Desenvolvimento Web">
+            <p>Criamos sites personalizados que combinam design inovador com funcionalidade excepcional, garantindo que sua marca se destaque no mundo digital e ofereça uma experiência de usuário especial.</p>
         </div>
         <div class="service">
-            <h2>Marketing Digital</h2>
-            <p>Oferecemos estratégias personalizadas de marketing digital que aumentam seu alcance, melhoram engajamento e impulsionam suas vendas.</p>
+            <h2>Gestão de Redes Sociais</h2>
+            <img src="static/imagens/gerenciamentos_rs.webp" alt="Marketing Digital">
+            <p> O nosso serviço foca-se na criação de conteúdo criativo e táticas interativas, estabelecendo uma conexão autêntica e duradoura com os seus clientes. </p>
         </div>
         <div class="service">
-            <h2>Consultoria Tecnológica</h2>
-            <p>Proporcionamos consultoria especializada para otimizar processos e implementar soluções tecnológicas que elevam a eficiência operacional da sua empresa.</p>
+            <h2>Gestão de Reputação</h2>
+            <img src="static/imagens/gestao_reputacao.webp" alt="Consultoria Tecnológica">
+            <p>Protegemos e aprimoramos a sua presença digital através de estratégias robustas de gestão de reputação, monitorando ativamente feedbacks e interações para garantir que a sua imagem permaneça influente no ambiente online</p>
         </div>
     </section>
     <footer>
