--- a/sobrenos.html
+++ b/sobrenos.html
@@ -14,8 +14,8 @@
             <ul class="navigation">
                 <a href="index.html">Home</a>
                 <a href="sobrenos.html">Sobre Nós</a>
-                <a href="#services">Serviços</a>
-                <a href="#contact">Contactos</a>
+                <a href="servicos.html">Serviços</a>
+                <a href="contactos.html">Contactos</a>
             </ul>
         </nav>
     </header>
@@ -24,7 +24,7 @@
         <div class="container">
             <h1>Sobre Nós</h1>
             <p>
-                Na Mudança Digital, oferecemos produtos projetados especificamente para aumentar o número de clientes dos nossos parceiros. Através de soluções inovadoras e estratégias de mercado eficazes, garantimos que cada cliente obtenha resultados tangíveis e um crescimento significativo em sua base de consumidores.</p>
+                Na Mudança Digital, oferecemos produtos projetados especificamente para aumentar o número de clientes dos nossos parceiros. Através de soluções inovadoras e estratégias de mercado eficazes, garantimos que cada cliente obtenha resultados tangíveis e um crescimento significativo na sua base de consumidores.</p>
             <h2>A Nossa Equipa</h2>
             <div class="team-row">
                 <div class="team-member">
